crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_module_index_resolves_links_in_table_cells.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>interfaces</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Args](./interfaces/Args.md) | An object that contains [argument schema](./interfaces/ArgSchema.md). |
| [ArgSchema](./interfaces/ArgSchema.md) | A schema. |

===== default/interfaces/ArgSchema.md =====
# Interface: ArgSchema

<div id="argschema" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>A schema.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function ArgSchema(): void</code></pre>
</div>
</div>
===== default/interfaces/Args.md =====
# Interface: Args

<div id="args" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>An object that contains <a href="./ArgSchema.md">argument schema</a>.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Args(): void</code></pre>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>interfaces</span>
</span>
</div>

## Modules

- [default](./default/index.md)
