crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_module_index_source_link_uses_source_path.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/cli.md =====
# Function: cli()

Run.

## Signature

```ts
export function cli(): void
```

[View source](https://github.com/x/y/blob/main/packages/x/src/cli.ts#L1)
===== default/index.md =====
# default

**[Source](https://github.com/x/y/blob/main/packages/x/src/index.ts)**

_1 symbols · 1 functions_

## Functions

- [cli](./functions/cli.md) - Run.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions_

## Modules

- [default](./default/index.md)
