crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_normalizes_version_into_since_section.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

_1 symbols · 1 interfaces_

## Interfaces

- [Example](./interfaces/Example.md) - Example API.

===== combinators/interfaces/Example.md =====
# Interface: Example

Example API.

## Since

1.2.3

## Signature

```ts
export function Example(): void
```
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces_

## Modules

- [combinators](./combinators/index.md)
