crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_overloads_omit_implementation_signature.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/plugin.md =====
# Function: plugin()

Define a plugin

## Call Signature

```ts
export function plugin<E>(options: WithExt): PluginWithExtension<E>
```

Define a plugin with extension.

## Call Signature

```ts
export function plugin(options: WithoutExt): PluginWithoutExtension
```

Define a plugin without extension.
===== default/index.md =====
# default

_3 symbols · 3 functions_

## Functions

- [plugin](./functions/plugin.md) - Define a plugin with extension.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 3 symbols · 3 functions_

## Modules

- [default](./default/index.md)
