crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_references_collapse_overloads_to_one_entry.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
</div>

## References

### define

Re-exports [define](../definition/functions/define.md)

===== definition/functions/define.md =====
# Function: define()

<div id="define" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__section ox-api-entry__section--call-signature">
<h4>Call Signature</h4>
<pre><code class="language-typescript">export function define(): void</code></pre>
<div class="ox-api-entry__prose">
<p>Define.</p>
</div>
</div>
<div class="ox-api-entry__section ox-api-entry__section--call-signature">
<h4>Call Signature</h4>
<pre><code class="language-typescript">export function define(): void</code></pre>
<div class="ox-api-entry__prose">
<p>Define.</p>
</div>
</div>
</div>
===== definition/index.md =====
# definition

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [define](./functions/define.md) | Define. |

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>4</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>4</strong>
  <span>functions</span>
</span>
</div>

## Modules

- [default](./default/index.md)
- [definition](./definition/index.md)
