crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_references_section_uses_typedoc_layout.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== context/functions/createCommandContext.md =====
# Function: createCommandContext()

<div id="createcommandcontext" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Ctx.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function createCommandContext(): void</code></pre>
</div>
</div>
===== context/index.md =====
# context

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [createCommandContext](./functions/createCommandContext.md) | Ctx. |

## Interfaces

| Interface | Description |
| ------ | ------ |
| [CommandContextParams](./interfaces/CommandContextParams.md) | P. |

===== context/interfaces/CommandContextParams.md =====
# Interface: CommandContextParams

<div id="commandcontextparams" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>P.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function CommandContextParams(): void</code></pre>
</div>
</div>
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## References

### CommandContextParams

Re-exports [CommandContextParams](../context/interfaces/CommandContextParams.md)

***

### createCommandContext

Re-exports [createCommandContext](../context/functions/createCommandContext.md)

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>4</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>interfaces</span>
</span>
</div>

## Modules

- [context](./context/index.md)
- [default](./default/index.md)
