crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_renders_deprecated_tag_as_caution_alert_with_body.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/oldDefine.md =====
# Function: oldDefine()

> [!CAUTION]
> Use `define` instead.

Old helper.

## Signature

```ts
export function oldDefine(): void
```
===== combinators/index.md =====
# combinators

_1 symbols · 1 functions · 1 deprecated_

## Functions

- [oldDefine](./functions/oldDefine.md) - Old helper.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions · 1 deprecated_

## Modules

- [combinators](./combinators/index.md)
