crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_renders_experimental_tag_as_warning_alert.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/string.md =====
# Function: string()

> [!WARNING]
> This API is experimental and may change in future versions.

Create a string schema.

## Signature

```ts
export function string(): void
```
===== combinators/index.md =====
# combinators

_1 symbols · 1 functions_

## Functions

- [string](./functions/string.md) - Create a string schema.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions_

## Modules

- [combinators](./combinators/index.md)
