crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_renders_member_since_inline.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

_1 symbols · 1 interfaces · 1 members_

## Interfaces

- [PluginOptions](./interfaces/PluginOptions.md) - Plugin options.

===== combinators/interfaces/PluginOptions.md =====
# Interface: PluginOptions

Plugin options.

## Signature

```ts
export function PluginOptions(): void
```

## Properties

- `entry` _(optional)_ `property` `boolean` - Whether this is an entry command. **Since** v0.27.0
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces · 1 members_

## Modules

- [combinators](./combinators/index.md)
